# vlm4ocr

./: .dockerignore  .gitignore  404.html  README.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv
api/cli/: index.html
api/ocr_engines/: index.html
api/vlm_engines/: index.html
cli/: index.html
docs/: ocr_engines.md  quick_start.md  vlm_engines.md  web_application.md
docs/api/: vlm_engines.md
examples/: quick_start.py
examples/synthesized_data/few_shot_examples/ground_truth/: template_1_sample_4_poor.json  template_1_sample_4_poor.txt  template_3_sample_4_poor.json  template_3_sample_4_poor.txt  template_6_sample_4_poor.json  template_6_sample_4_poor.txt
nginx/: nginx.conf
ocr_engines/: index.html
quick_start/: index.html
release_notes/v0.1.0/: index.html
release_notes/v0.2.0/: index.html
release_notes/v0.3.0/: index.html
release_notes/v0.3.1/: index.html
release_notes/v0.4.0/: index.html
search/: search_index.json
services/web_app/: Dockerfile  config.yaml  pyproject.toml  requirements.txt
services/web_app/app/: __init__.py  app_services.py  routes.py
services/web_app/static/css/: style.css
services/web_app/static/js/: api_service.js  dom_updater.js  main.js  prompt_editor.js  script.js  ui_handlers.js
services/web_app/templates/: base.html  index.html
vlm_engines/: index.html
web_application/: index.html
